Alors J'ai réparée le binz, im manquait un "}" Et j'ai ad deux trois trucs, surout du css

--- a/src/main/resources/templates/GestionDesStock.html
+++ b/src/main/resources/templates/GestionDesStock.html
@@ -134,7 +134,7 @@
 </head>
 <body>
 <h1>Gestion des stocks de grain de café</h1>
-<h2><button id="toggle-form" class="btn btn-primary">Add Product</button></h2>
+<h2><button id="toggle-form" class="btn btn-primary">Ajouter un produit</button></h2>
 
   <div class="admin" id="add-product">
 
