--- a/src/main/resources/templates/VItrine.html
+++ b/src/main/resources/templates/VItrine.html
@@ -1,6 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>/* Style général */
+  body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #F5F5F5;
+  }
+
+  /* Style pour le header */
+  header {
+    background-color: #764C28;
+    color: #FFFFFF;
+    padding: 10px;
+  }
+
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+
+  nav ul li a {
+    color: #FFFFFF;
+    text-decoration: none;
+    padding: 5px;
+    transition: all 0.2s ease-in-out;
+  }
+
+  nav ul li a:hover {
+    background-color: #FFFFFF;
+    color: #764C28;
+  }
+
+  /* Style pour le main */
+  main {
+    margin: 50px auto;
+    width: 80%;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 3em;
+    margin-bottom: 30px;
+    color: #764C28;
+  }
+
+  .produits {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .produit {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 30px;
+    box-shadow: 0px 0px 10px #999999;
+    width: 30%;
+  }
+
+  .produit img {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 10px;
+  }
+
+  .produit h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #764C28;
+  }
+
+  .produit .description {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    line-height: 1.4;
+    color: #333333;
+  }
+
+  .produit .prix {
+    font-size: 1.3em;
+    color: #764C28;
+    margin-bottom: 20px;
+  }
+
+  .produit button {
+    background-color: #764C28;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+  }
+
+  .produit button:hover {
+    background-color: #FFFFFF;
+    color: #764C28;
+  }
+  </style>
   <meta charset="UTF-8">
   <title>Rayon Café - Vente de grains de café</title>
   <link rel="stylesheet" href="style.css">
