--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -11,7 +11,6 @@
       width: 50px;
       height: 50px;
       border: none;
-      display: none;
       bottom: 20px;
       left: 20px;
     }
@@ -173,12 +172,7 @@
 </section>
 <footer>
   <p>&copy; La Roasterie</p>
-<button id="myButton" class="admin-button admin"> </button>
-<script type="text/javascript">
-  document.getElementById("myButton").onclick = function () {
-    location.href = "http://localhost:8080/Admin";
-  };
-</script>
+<a id="myButton" class="admin-button admin" href="Admin"> </a>
 </footer>
 </body>
 </html>
