Je push je suis entrain de finaliser le panier

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -131,7 +131,8 @@
 
   <article>
   <button onclick="window.location.href='http://localhost:8080/shopBeans'">
-    <img src="https://www.terresdecafe.com/upload/tdc_zone2/1/tdc_img3.jpg" alt="Café en grains">
+
+    <img src="/Picture/cafe3" alt="Café en grains">
     <h2>Café en grains</h2>
     <p>Le café ça s'oxyde avec l'oxygène, la solution acheter des grains frais. Découvrez notre sélection qui va vous régaler.</p>
   </button>
@@ -140,7 +141,7 @@
 
   <article>
     <button onclick="alert('La Roasterie ne souhaite proposée que le meilleur et nous ne sommes acteuellement pas en mesure. Cette option est donc indisponible' )">
-    <img src="https://www.terresdecafe.com/upload/tdc_zone2/1/tdc_img2.jpg" alt="Café instantanné de spécialité">
+    <img src="/Picture/cafe2" alt="Café instantanné de spécialité">
     <h2>Café instantanné</h2>
     <p>Ramené le café de spécialité à la maison, de l'eau chaude et un sachet suffise pour un café parfait.</p>
     </button>
@@ -148,7 +149,7 @@
 
   <article>
     <button onclick="alert('La Roasterie ne souhaite proposée que le meilleur et nous ne sommes acteuellement pas en mesure. Cette option est donc indisponible' )">
-    <img src="https://www.terresdecafe.com/upload/tdc_zone2/1/tdc_img1.jpg" alt="Café en capsules">
+    <img src="/Picture/cafe1" alt="Café en capsules">
     <h2>Café en capsules</h2>
     <p>Pour les amateurs d'arômes complexe et délicat.</p>
     </button>
