--- a/src/main/resources/templates/GestionDesStock.html
+++ b/src/main/resources/templates/GestionDesStock.html
@@ -138,7 +138,7 @@
 
   <div class="admin" id="add-product">
 
-    <form action="#" th:action="@{/save}" th:object="${newBeans}" method="post">
+    <form action="#" th:action="@{/add}" th:object="${newBeans}" method="post">
 
 
       <div alight="left">
